tests/codegen/fail/unsupported_async_fn_build.ql
async fn worker() -> Int {
    return 1
}

async fn main() -> Int {
    return await worker()
}
